fix loader styling on smaller screens

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -44,7 +44,7 @@
             top: 0;
             left: 0;
             height: 100%;
-            width: 100%;
+            width: 150%;
             background: var(--clr-neutral-100);
             overflow: hidden;
         }
